2004-06-18 Kilian Krause <kk@verfaction.de>

	* src/druid.cpp: Bug fixed by Julien Puydt.

2004-06-17  Damien Sandras  <dsandras@gnome.org>

	* lib/contacts/gm_contacts-eds.cpp: Do not overwrite existing data not
	managed by GnomeMeeting when modifying an evolution contact.

2004-06-16  Damien Sandras  <dsandras@gnome.org>

	* src/addressbook_window.cpp: Added back copy URL to clipboard.

2004-06-16  Damien Sandras  <dsandras@gnome.org>

	* src/addressbook_window.cpp: Added right-click menu.

2004-06-14  Damien Sandras  <dsandras@gnome.org>

	* src/addressbook_window.cpp: Made SearchThread external so that it
	works with older gcc.

2004-06-14  Damien Sandras  <dsandras@gnome.org>

	* lib/contacts/gm_contacts-eds.cpp, 
	lib/contacts/gm_contacts-gm_conf.cpp,
	lib/contacts/gm_contacts-local.h, lib/contacts/gm_contacts.cpp,
	lib/contacts/gm_contacts.h, src/gnomemeeting.cpp: Added function
	to create the address book if it doesn't exist on virgin system.
	Thanks to Chris Toshok for his help!

2004-06-10  Damien Sandras  <dsandras@gnome.org>

	* lib/contacts/gm_contacts-eds.cpp, 
	lib/contacts/gm_contacts-gm_conf.cpp,
	lib/contacts/gm_contacts-local.h,
	lib/contacts/gm_contacts.cpp, lib/contacts/gm_contacts.h, 
	src/addressbook_window.cpp, src/gnomemeeting.cpp: Removed unnecessary
	warnings when the address book is initially empty. Fixed creation
	of GmAddressbook in that case. Added (non-working) function to create
	the initial EDS address book.

2004-06-09  Damien Sandras  <dsandras@gnome.org>

	* src/addressbook_window.cpp: Changed API to permit ILS refreshes
	to be done in a thread.

2004-06-09  Damien Sandras  <dsandras@gnome.org>

	* configure.in: Check for EDS > 0.94.

	* lib/contacts/gm_contacts-eds.cpp: Fixes for new EDS > 0.94. Thanks
	to Julien Puydt for his patches.
	
	* lib/contacts/gm_contacts-gm_conf.cpp: Minor fix.
	
	* lib/contacts/gm_contacts-remote.cpp: Fixed for new API of
	contacts.h.

	* src/addressbook_window.cpp: Minor cleanups.
