@@ -1,4 +1,15 @@
-2004-06-18 Kilian Krause <kk@verfaction.de>
+2004-06-18  Damien Sandras  <dsandras@gnome.org>
+
+	* src/addressbook_window.cpp, src/addressbook_window.h: Permit 
+	to the edit_contact_dialog to be run without GmAddressbook passed
+	as argument.
+	
+	* src/calls_history_window.cpp, src/calls_history_window.h: Cleaned
+	code so that it complies with the latest coding standards for GM.
+	Added menu to call users and add them to the address book from the
+	calls history.
+
+2004-06-18  Kilian Krause <kk@verfaction.de>
 
 	* src/druid.cpp: Bug fixed by Julien Puydt.
 
